--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-description">Product Designer</p>
+              <div class="team-description-item">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-description">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -154,8 +156,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-description">Frontend Developer</p>
+              <div class="team-description-item">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-description">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -164,8 +168,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-description">Marketing</p>
+              <div class="team-description-item">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-description">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -174,8 +180,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-description">UI Designer</p>
+              <div class="team-description-item">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-description">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
