--- a/portfolio.html
+++ b/portfolio.html
@@ -87,8 +87,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Banking App Interface Concept</h2>
-                <p class="projects-description">App</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Banking App Interface Concept</h2>
+                  <p class="projects-description">App</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -99,8 +101,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Cashless Payment</h2>
-                <p class="projects-description">Marketing</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Cashless Payment</h2>
+                  <p class="projects-description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -111,8 +115,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Meditation App</h2>
-                <p class="projects-description">App</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Meditation App</h2>
+                  <p class="projects-description">App</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -123,8 +129,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Taxi Service</h2>
-                <p class="projects-description">Marketing</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Taxi Service</h2>
+                  <p class="projects-description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -135,8 +143,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Screen Illustrations</h2>
-                <p class="projects-description">Design</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Screen Illustrations</h2>
+                  <p class="projects-description">Design</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -147,8 +157,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Online Courses</h2>
-                <p class="projects-description">Marketing</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Online Courses</h2>
+                  <p class="projects-description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -159,8 +171,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Instagram Stories Concept</h2>
-                <p class="projects-description">Design</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Instagram Stories Concept</h2>
+                  <p class="projects-description">Design</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -171,8 +185,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Organic Food</h2>
-                <p class="projects-description">Web Site</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Organic Food</h2>
+                  <p class="projects-description">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -183,8 +199,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projects-name">Fresh Coffee</h2>
-                <p class="projects-description">Web Site</p>
+                <div class="projects-description-item">
+                  <h2 class="projects-name">Fresh Coffee</h2>
+                  <p class="projects-description">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
